# rust-web-worker-test

./: Cargo.toml  package.json  rollup.config.js
src/: lib.rs
src/thread1/: Cargo.toml
src/thread1/src/: lib.rs
src/thread2/: Cargo.toml
src/thread2/src/: lib.rs
src/worker/: Cargo.toml
src/worker/src/: arguments.rs  lib.rs  macros.rs  transfer.rs
