[package]
name = "thread1"
version = "0.1.0"
description = "Thread1"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[features]
api = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.32"
worker = { path = "../worker" }
