[package]
name = "worker"
version = "0.1.0"
description = "Worker utilities"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.32"
gloo-events = "0.1.2"
futures-channel = "0.3.23"
futures-core = "0.3.23"
futures-util = "0.3.23"
js-sys = "0.3.59"

[dependencies.web-sys]
version = "0.3.59"
features = [
    "DedicatedWorkerGlobalScope",
    "Worker",
    "WorkerOptions",
    "WorkerType",
]
